--- a/LaxStats_Admin_panel/LaxStats_Admin_panel.csproj
+++ b/LaxStats_Admin_panel/LaxStats_Admin_panel.csproj
@@ -21,4 +21,9 @@
     <PackageReference Include="Refractored.MvvmHelpers" Version="1.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Commands\LeagueCommands\" />
+    <Folder Include="Commands\TeamCommands\" />
+  </ItemGroup>
+
 </Project>
